@@ -1,1 +1,1 @@
-DIST noscript-2.6.8.16.xpi 537046 SHA256 a6d3f03846826ff59c0d232adbac0eab85d99c4536392a26217ab35350d9992b SHA512 2a1f87c4f2c7a8fc7234c2794e917183aabef481e15e3d95c29a6e758d1932f5584e1689cee863230f24f901d1bef5b40824b28ba738a683e11ab506b189a2fc WHIRLPOOL 2582201485cb4a207df263e5ced3ee6e58d866b41fc52b3238822de61e2e26f1b8a8a4a70c1e507e0f407e04ea2cb8756b81645ea63329b4c95a899b6bfc35ae
+DIST noscript-2.6.8.17.xpi 537052 SHA256 8d3246153054c92f850ea8a85b19a2e493a17979751087e4c7bf11f4056282f1 SHA512 72852be1262f77aa559e2c6ba080ef99c3d238ac15ec1547fb254452d7e6de5563b28d55587c690f4560c27d1e6588410f59eeb71487dd0ef69644ca30ccd394 WHIRLPOOL 6f614769a0da167e5767f08c863248505624c00f0a5785c7740fe993caf7b07ff5b891870c815c5d2cceae6f38b95df6ff032c440ecda5520ecf300b42e95860
