@@ -29,33 +29,33 @@ RDEPEND="${PYTHON_DEPS}
 	x11-apps/xwd"
 
 DISABLE_AUTOFORMATTING="true"
-DOC_CONTENTS="After installation, execute following commands:
- $ cp -r ${ROOT}usr/share/doc/${PF}/addons/Xresources ~/.Xresources
- $ cp -r ${ROOT}usr/share/doc/${PF}/addons/Xsession ~/.xinitrc
+DOC_CONTENTS="After installation, execute the following commands:
+ $ cp -r ${EROOT}usr/share/doc/${PF}/addons/Xresources ~/.Xresources
+ $ cp -r ${EROOT}usr/share/doc/${PF}/addons/Xsession ~/.xinitrc
 
 Many applications can extend functionality of fvwm-crystal.
-They are listed in ${ROOT}usr/share/doc/${PF}/INSTALL.gz.
+They are listed in ${EROOT}usr/share/doc/${PF}/INSTALL.*
 
-Some icons fixes was committed recently.
-To archive the same fixes on your private icon files,
-please read ${ROOT}usr/share/doc/${PF}/INSTALL.gz.
+Some icons fixes were committed recently.
+To achieve the same fixes on your private icon files,
+please read ${EROOT}usr/share/doc/${PF}/INSTALL.*
 This will fix the libpng warnings at stderr.
 
 The color themes was updated to Fvwm InfoStore.
 To know how to update your custom color themes, please run
-	${ROOT}usr/share/${PN}/addons/convert_colorsets"
+	${EROOT}usr/share/${PN}/addons/convert_colorsets"
 
 src_prepare() {
-	sed -i -e 's!/usr/local!${EPREFIX%/}/usr!' -- "${S}/Makefile"
 	epatch_user
 }
 
 src_install() {
-	emake \
-		DESTDIR="${D}" \
+	emake DESTDIR="${ED}" \
 		docdir="${EPREFIX%/}/usr/share/doc/${PF}" \
 		prefix="${EPREFIX%/}/usr" \
 		install
+   # GNU License is globally in the portage tree
+   rm -vf "${ED}/usr/share/doc/${PF}"/LICENSE
 
 	python_replicate_script \
 		"${ED}/usr/bin/${PN}".{apps,wallpaper} \
