@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.8.17 (08 Mar 2014)
+
+  08 Mar 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *noscript-2.6.8.16 (01 Mar 2014)
 
   01 Mar 2014; Martin Väth <martin@mvath.de>:
